--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
+    "pyright": "npm:pyright@^1.1.398",
     "@std/assert": "jsr:@std/assert@1"
   }
 }
