--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,17 +15,15 @@
   customManagers: [
     {
       customType: "jsonata",
-      fileFormat: "jsonc",
       fileMatch: ["(^|/)deno.jsonc?$"],
+      datasourceTemplate: "npm",
       matchStrings: [
         " \
           $each(imports, function($import) {( \
             $groups := $match($import,/^(npm:)?(.+)@(.+?)$/).groups; \
             $groups[0] ? { \
               'depName': $groups[1], \
-              'currentValue': $groups[2], \
-              'datasource': 'npm', \
-              'versioning': 'npm' \
+              'currentValue': $groups[2] \
             } \
           )}) \
         ",
